--- a/Quick Access/Descriptive_statistics_plots.ipynb
+++ b/Quick Access/Descriptive_statistics_plots.ipynb
@@ -49,8 +49,7 @@
     "dpi = 300\n",
     "\n",
     "#To view interactive plot in JupyterNotebook\n",
-    "fig.show()\n",
-    "```"
+    "fig.show()\n"
    ]
   },
   {
